--- a/index.html
+++ b/index.html
@@ -143,29 +143,32 @@
       );
     });
 
-//added below:
+    // FINAL block — sends data to Qualtrics
     timeline.push({
-  type: 'html-button-response',
-  stimulus: `
-    <h2>Thank you for completing the experiment.</h2>
-    <p>Your responses have been recorded.</p>
-    <p><strong>Please click the button below to continue.</strong></p>
-  `,
-  choices: ['Continue'],
-  on_finish: function () {
-    // Get all jsPsych data
-    const data = jsPsych.data.get().values();
+      type: 'html-button-response',
+      stimulus: `
+        <h2>Thank you for completing the experiment.</h2>
+        <p>Your responses have been recorded.</p>
+        <p><strong>Please click the button below to continue.</strong></p>
+      `,
+      choices: ['Continue'],
+      on_finish: function () {
+        const data = jsPsych.data.get().values();
+        console.log("Sending jsPsych data to Qualtrics:");
+        console.log(data);
 
-    console.log("Attempting to send data to Qualtrics...");
-    console.log("Payload:", data);
+        window.parent.postMessage({
+          type: "jspsych_complete",
+          responses: data
+        }, "*");
+      }
+    });
 
-    // Send to Qualtrics via postMessage
-    window.parent.postMessage({
-      type: "jspsych_complete",
-      responses: data
-    }, "*");
-  }
-});
-    </script>
+    //START jsPsych
+    jsPsych.init({
+      timeline: timeline,
+      display_element: 'jspsych-target'
+    });
+  </script>
 </body>
 </html>
