--- a/index.html
+++ b/index.html
@@ -148,8 +148,7 @@
       type: 'html-button-response',
       stimulus: `
         <h2>Thank you for completing the experiment.</h2>
-        <p>Your responses have been recorded.</p>
-        <p><strong>Please click the button below to continue.</strong></p>
+        <p>Please wait while your data is recorded</p>
       `,
       choices: ['Continue'],
       on_finish: function () {
