--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     }
 
     .image-wrapper {
-      margin-bottom: 100px; //was 120
+      margin-bottom: 120px; 
       text-align: center;
     }
 
