--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 
     .image-wrapper {
       margin-bottom: 120px; 
+      padding-top: 30px; // added this line 
       text-align: center;
     }
 
